refactor : 구독기능 롤백 및 수정
