# srcs/subscription/subscription.controller.js
@@ -5,8 +5,8 @@ import { response } from "../../config/response.js";
 export const subscribe = async (req, res) => {
   try {
     const userId = req.userId;
-    const paymentInfo = req.body;  // paymentKey, orderId, amount
-    const result = await SubscriptionService.subscribe(userId, paymentInfo);
+    // const paymentInfo = req.body;  // paymentKey, orderId, amount
+    const result = await SubscriptionService.subscribe(userId);
 
     res.send(response(status.SUBSCRIPTION_SUCCESS, null));
   } catch (error) {
